apps/moodist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodist
  namespace: moodist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodist
  template:
    metadata:
      labels:
        app: moodist
    spec:
      containers:
        - name: moodist
          image: ghcr.io/remvze/moodist:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 64Mi
              cpu: "250m"
            requests:
              memory: 32Mi
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
        - name: nginx-cache
          emptyDir:
            sizeLimit: 16Mi
        - name: nginx-run
          emptyDir:
            sizeLimit: 1Mi
        - name: nginx-conf
          emptyDir:
            sizeLimit: 1Mi
