apps/moodist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodist
  namespace: moodist
spec:
  selector:
    app: moodist
  ports:
    - port: 8080
      targetPort: 8080
