apps/moodist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodist
  namespace: moodist
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: moodist.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: moodist
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - moodist.sanxer.dk
      secretName: moodist-tls
